docs(phase5): add setup guide and automation scripts
- PHASE5_SETUP.md: Comprehensive Phase 5 setup and troubleshooting guide
- scripts/phase5_up.sh: Automated infrastructure launch script with health checks
- .env.example: Extended with 40+ Phase 5 configuration variables

--- a/.env.example
+++ b/.env.example
@@ -34,3 +34,76 @@ SMTP_HOST=mailhog
 SMTP_PORT=1025
 SMTP_FROM=noreply@nova.dev
 
+# ============ Phase 5 Services ============
+
+# Neo4j (Social Graph)
+NEO4J_ENABLED=true
+NEO4J_HOST=neo4j
+NEO4J_PORT=7687
+NEO4J_USER=neo4j
+NEO4J_PASSWORD=neo4jpass
+
+# Elasticsearch (Messaging & Search)
+ELASTICSEARCH_ENABLED=true
+ELASTICSEARCH_URL=http://elasticsearch:9200
+ELASTICSEARCH_SHARDS=2
+ELASTICSEARCH_REPLICAS=1
+
+# Nginx RTMP (Live Streaming)
+NGINX_RTMP_ENABLED=true
+NGINX_RTMP_HOST=nginx-rtmp
+NGINX_RTMP_PORT=1935
+NGINX_HTTP_PORT=80
+RTMP_INGEST_URL=rtmp://nginx-rtmp:1935/live
+HLS_STREAM_URL=http://nginx-rtmp:80/hls
+
+# Prometheus (Monitoring)
+PROMETHEUS_ENABLED=true
+PROMETHEUS_URL=http://prometheus:9090
+PROMETHEUS_RETENTION=15d
+
+# Grafana (Visualization)
+GRAFANA_ENABLED=true
+GRAFANA_URL=http://grafana:3000
+GRAFANA_USER=admin
+GRAFANA_PASSWORD=admin
+
+# Ray Serve (ML Model Inference)
+RAY_ENABLED=true
+RAY_HEAD_ADDRESS=ray-head:6379
+RAY_SERVE_URL=http://ray-head:8265
+
+# Redis Cluster (Phase 5)
+REDIS_CLUSTER_ENABLED=true
+REDIS_CLUSTER_NODES=redis-cluster-1:6379,redis-cluster-2:6380,redis-cluster-3:6381
+
+# Kafka Phase 5 Topics
+KAFKA_NOTIFICATIONS_TOPIC=nova-notifications
+KAFKA_MESSAGES_TOPIC=nova-messages
+KAFKA_STREAMING_TOPIC=nova-streaming
+KAFKA_SOCIAL_TOPIC=nova-social-graph
+KAFKA_RECOMMENDATIONS_TOPIC=nova-recommendations
+
+# Feature Flags
+ENABLE_NOTIFICATIONS=true
+ENABLE_MESSAGING=true
+ENABLE_LIVE_STREAMING=true
+ENABLE_SOCIAL_GRAPH=true
+ENABLE_RECOMMENDATIONS=true
+
+# Performance Tuning
+NOTIFICATION_BATCH_SIZE=100
+NOTIFICATION_BATCH_TIMEOUT_MS=1000
+MESSAGE_SEARCH_POOL_SIZE=10
+STREAM_BUFFER_SIZE_MB=100
+SOCIAL_CACHE_TTL_SECONDS=3600
+RECOMMENDATION_CACHE_TTL_SECONDS=1800
+
+# S3 (Optional for local dev - set DISABLE_S3=1 to skip)
+DISABLE_S3=0
+S3_BUCKET_NAME=nova-dev
+S3_REGION=us-east-1
+S3_ACCESS_KEY=minioadmin
+S3_SECRET_KEY=minioadmin
+S3_ENDPOINT=http://minio:9000
+
