--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   # PostgreSQL Database
   # ============================================
   postgres:
-    image: debezium/postgres:15-alpine
+    image: kartoza/postgis:15-3.4
     container_name: nova-postgres
     restart: unless-stopped
     environment:
