--- a/.env.example
+++ b/.env.example
@@ -1,36 +1,60 @@
-###############################################
-# Nova Local Development (.env.example)
-# Copy to .env and fill in secrets as needed
-###############################################
-
-# ============ User Service ============
+# ============================================
+# Application Configuration
+# ============================================
 APP_ENV=development
-USER_SERVICE_PORT=8080
+APP_HOST=0.0.0.0
+APP_PORT=8080
+RUST_LOG=debug
 
-# Postgres
+# ============================================
+# Database Configuration (PostgreSQL)
+# ============================================
 POSTGRES_DB=nova_auth
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
+POSTGRES_PORT=5432
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/nova_auth
+DATABASE_MAX_CONNECTIONS=20
 
-# Redis
+# ============================================
+# Redis Configuration
+# ============================================
 REDIS_PASSWORD=redis123
+REDIS_PORT=6379
+REDIS_URL=redis://:redis123@localhost:6379/0
+REDIS_POOL_SIZE=10
 
-# ClickHouse
-CLICKHOUSE_URL=http://clickhouse:8123
-CLICKHOUSE_DB=nova_feed
-CLICKHOUSE_USER=default
-CLICKHOUSE_PASSWORD=clickhouse
+# ============================================
+# JWT Configuration
+# ============================================
+# IMPORTANT: Change this in production! Must be at least 32 characters
+JWT_SECRET=dev_secret_change_in_production_32chars_minimum_length
+JWT_ACCESS_TOKEN_TTL=900           # 15 minutes (in seconds)
+JWT_REFRESH_TOKEN_TTL=604800       # 7 days (in seconds)
 
-# Kafka
-# (Uses internal docker network: kafka:9092)
-
-# JWT (required; base64-encoded PEM contents)
-# Generate with: scripts/dev/generate-jwt-dev-keys.sh
-JWT_PRIVATE_KEY_PEM=
-JWT_PUBLIC_KEY_PEM=
-
-# SMTP (MailHog)
-SMTP_HOST=mailhog
+# ============================================
+# Email Configuration (SMTP)
+# ============================================
+SMTP_HOST=localhost
 SMTP_PORT=1025
+SMTP_USERNAME=
+SMTP_PASSWORD=
 SMTP_FROM=noreply@nova.dev
 
+# For production (example with Gmail):
+# SMTP_HOST=smtp.gmail.com
+# SMTP_PORT=587
+# SMTP_USERNAME=your-email@gmail.com
+# SMTP_PASSWORD=your-app-password
+# SMTP_FROM=noreply@yourdomain.com
+
+# ============================================
+# Rate Limiting Configuration
+# ============================================
+RATE_LIMIT_MAX_REQUESTS=100
+RATE_LIMIT_WINDOW_SECS=60
+
+# ============================================
+# Service Ports (for docker-compose)
+# ============================================
+USER_SERVICE_PORT=8080
