feat(phase-7b): integrate Phase 7B core services and features
## New Features

### Notifications System (T201-T202)
- Firebase Cloud Messaging (FCM) integration for Android/Web
- Apple Push Notification service (APNs) integration for iOS
- Kafka-based notification consumer with batch processing
- Platform-aware routing between FCM and APNs
- Exponential backoff retry logic for failed deliveries
- Real-time WebSocket hub for push notification delivery

### Messaging System (T203)
- WebSocket-based messaging handler for real-time communication
- Message service with database persistence
- Encryption support for message content
- End-to-end integration testing

### Recommendations Engine (v2 Enhancements)
- Hybrid ranking system combining collaborative filtering and content-based
- AB testing framework for recommendation experiments
- ONNX model serving integration for ML-based ranking
- Collaborative filtering implementation

### Video Processing & CDN
- Streaming manifest generation (HLS/DASH)
- Transcoding optimization with quality adaptation
- Transcoding progress tracking and reporting
- FFmpeg configuration and optimization
- CDN failover and fallback logic
- Origin shield integration

### Performance Improvements
- Feed ranking service enhancements
- Video service improvements
- Query profiling and optimization

## Configuration Changes
- Expanded Cargo.toml with new dependencies for messaging and notifications
- Updated main.rs with new service initialization
- Enhanced error handling types
- Configuration updates for notification services

## Testing
- New integration tests for messaging end-to-end flows
- Video processing and ranking tests
- Performance benchmarks for feed ranking
- Event handling and deduplication tests

## Breaking Changes
- New notification events table required (see migrations)
- Enhanced error types in public API

## Dependencies Added
- hyper 0.14 with HTTP/2 support
- rustls and rustls-pemfile for TLS
- Additional Kafka and notificatio

--- a/.env.example
+++ b/.env.example
@@ -31,6 +31,8 @@ REDIS_POOL_SIZE=10
 JWT_SECRET=dev_secret_change_in_production_32chars_minimum_length
 JWT_ACCESS_TOKEN_TTL=900           # 15 minutes (in seconds)
 JWT_REFRESH_TOKEN_TTL=604800       # 7 days (in seconds)
+JWT_PRIVATE_KEY_PEM=BASE64_ENCODED_PRIVATE_KEY_PEM
+JWT_PUBLIC_KEY_PEM=BASE64_ENCODED_PUBLIC_KEY_PEM
 
 # ============================================
 # Email Configuration (SMTP)
@@ -53,6 +55,27 @@ SMTP_FROM=noreply@nova.dev
 # ============================================
 RATE_LIMIT_MAX_REQUESTS=100
 RATE_LIMIT_WINDOW_SECS=60
+
+# ============================================
+# Notifications & Push Configuration
+# ============================================
+FCM_PROJECT_ID=your-firebase-project-id
+# Encode the Firebase service-account JSON (entire file) using base64
+FCM_SERVICE_ACCOUNT_JSON_BASE64=BASE64_ENCODED_SERVICE_ACCOUNT_JSON
+
+APNS_CERTIFICATE_PATH=certs/apns_cert.p8
+APNS_KEY_PATH=certs/apns_key.p8
+APNS_TEAM_ID=YOUR_TEAM_ID
+APNS_KEY_ID=YOUR_KEY_ID
+APNS_BUNDLE_ID=com.example.nova
+APNS_IS_PRODUCTION=false
+
+# ============================================
+# Kafka Configuration
+# ============================================
+KAFKA_BROKERS=localhost:9092
+KAFKA_EVENTS_TOPIC=events
+KAFKA_NOTIFICATIONS_TOPIC=notifications
 
 # ============================================
 # Service Ports (for docker-compose)
