--- a/backend/user-service/Cargo.toml
+++ b/backend/user-service/Cargo.toml
@@ -72,6 +72,12 @@ prost = "0.12"
 ndarray = "0.15"
 http = "0.2"
 
+# Phase 7A: Push Notifications (T202)
+hyper = { version = "0.14", features = ["http2", "client", "tcp"] }
+hyper-rustls = "0.24"
+rustls = "0.21"
+rustls-pemfile = "1.0"
+
 [dev-dependencies]
 tokio-test = "0.4"
 mockall = "0.12"
