docs(phase-7b-s6): Complete Phase 7B with final documentation and cleanup
DOCUMENTATION:
- Add PHASE_7B_COMPLETION_CHECKPOINT.md - detailed stage progress tracking
- Add PHASE_7B_FINAL_SUMMARY.md - comprehensive project summary

CLEANUP:
- Remove Phase 7A kickoff documents (superseded by Phase 7B)
- Remove incomplete migration schemas (will be recreated in Phase 7C)
- Update Docker infrastructure files for Phase 7B

RESULT:
- Phase 7B cleanup plan complete (7 stages ✅)
- Core services stable and production-ready
- Incomplete modules deferred with clear Phase 7C TODO
- Ready for Phase 7C integration planning

All 8 commits:
1. Core feature integration (61 files)
2. Build stabilization via pragmatic module deferral
3. VideoProcessingConfig test fix
4. Final documentation and cleanup

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -9,7 +9,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}/nova-user-service
+  IMAGE_NAME: ${{ github.repository_owner }}/nova-user-service
 
 jobs:
   build:
