feat(messaging): add minimal messaging API e2e flow\n\n- Optimize GET /conversations (single SQL with LATERAL last_message + get_unread_count + settings); add total\n- Add handlers + routes for conversations/messages (JWT-protected)\n- Add migration 018_messaging_schema.sql (conversations, members, messages, unread func)\n- Make migrations tolerant in dev (warn-only)\n- ClickHouse health check: avoid readonly setting and cast result type\n- Docs: end-to-end walkthrough + scripted E2E; mark-as-read response aligned\n- Script: scripts/examples/messaging_e2e.sh (auto register/verify/login 3 users, run direct+group flows)\n- Add integration test scaffolds (ignored)

--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -1,6 +1,9 @@
 [workspace]
 members = [
-    "user-service"
+    "user-service",
+    "messaging-service",
+    "search-service",
+    "libs/crypto-core"
 ]
 resolver = "2"
 
