feat(phase-7b): Enhance messaging E2E implementation with improved encryption and WebSocket
- Add crypto-core security module with NaCl box implementation (WIP)
- Enhance messaging service with better error handling and middleware
- Implement improved WebSocket handlers with authorization checks
- Add comprehensive integration tests:
  - test_forbidden_non_member_send.rs: Verify authorization
  - test_ws_typing.rs: Real-time typing indicators
  - test_ws_unauthorized.rs: WebSocket auth validation
- Update frontend scaffolding with package.json and ESLint config
- Add Kafka Docker Compose configuration for local dev
- Enhance messaging API routes with better validation
- Improve Elasticsearch pub/sub integration
- Update specs documentation:
  - spec.md: Add Architecture Decisions & Trade-offs section
  - plan.md: Complete Constitution Check + Tech Stack details
  - tasks.md: Reorganize for TDD-first execution (245 tasks)
- Add security/keys module for key management
- Update repository layer with improved query optimization
- Enhance error handling and logging across services

Overall progress: 60% complete on Phase 7B core features

--- a/backend/messaging-service/Cargo.toml
+++ b/backend/messaging-service/Cargo.toml
@@ -22,6 +22,7 @@ jsonwebtoken = { workspace = true }
 crypto-core = { path = "../libs/crypto-core" }
 chrono = { workspace = true }
 once_cell = "1.19"
+base64 = { workspace = true }
 
 [profile.release]
 codegen-units = 1
