--- a/backend/libs/crypto-core/Cargo.toml
+++ b/backend/libs/crypto-core/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 rand = { workspace = true }
 serde = { version = "1", features = ["derive"] }
 thiserror = { workspace = true }
+sodiumoxide = { version = "0.2" }
