--- a/backend/search-service/Cargo.toml
+++ b/backend/search-service/Cargo.toml
@@ -4,6 +4,30 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+# Web framework
+axum = { version = "0.7", features = ["macros"] }
+tokio = { version = "1", features = ["full"] }
+
+# Database
+sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }
+uuid = { version = "1", features = ["v4", "serde"] }
+
+# Serialization
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
+# Utilities
+chrono = { version = "0.4", features = ["serde"] }
+dotenvy = "0.15"
+thiserror = "1"
+
+# Redis
+redis = { version = "0.26", features = ["tokio-comp", "connection-manager"] }
+
+# Logging
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
+
+[profile.release]
+codegen-units = 1
+lto = true
