fix(phase-2): Complete cache invalidation strategy and add tests
## Cache Invalidation Fixes

- Complete cache invalidation for relationship changes:
  - follow_user(): Invalidate both users' profile cache and all search caches
  - unfollow_user(): Same invalidation pattern
  - block_user(): Invalidate user caches and search results (affects visibility)
  - unblock_user(): Invalidate user caches and search results

- Add redis_manager parameter to block/unblock functions
- Graceful fallback: Redis errors don't block database operations

## Cache Integration Tests

- New tests/integration/cache_test.rs with 6 unit tests:
  - test_cache_key_generation: Verify cache key format
  - test_search_response_serialization: Ensure UserSearchResponse is JSON-compatible
  - test_cache_ttl_values: Validate TTL constants (1h user, 30m search)
  - test_cache_invalidation_pattern: Verify key patterns for cleanup
  - test_cache_miss_recovery: Test fallback behavior on cache miss/error
  - test_cache_invalidation_triggers: Document all cache invalidation events

- All 6 tests passing ✅

## Consistency

- Cache invalidation now consistent across all user-affecting operations
- Prevents stale search results after relationship changes
- Zero data corruption risk: All operations degrade gracefully

--- a/backend/user-service/Cargo.toml
+++ b/backend/user-service/Cargo.toml
@@ -15,6 +15,10 @@ path = "src/main.rs"
 # path = "src/bin/job_worker.rs"
 # TODO: Uncomment when job_worker.rs is implemented
 
+[[bin]]
+name = "graph_backfill"
+path = "src/bin/graph_backfill.rs"
+
 [lib]
 name = "user_service"
 path = "src/lib.rs"
@@ -24,6 +28,9 @@ path = "src/lib.rs"
 actix-web.workspace = true
 actix-rt.workspace = true
 actix-cors.workspace = true
+actix = "0.13"
+actix-web-actors = "4.3"
+actix-http = "3.9"
 tokio.workspace = true
 sqlx.workspace = true
 redis.workspace = true
@@ -65,6 +72,9 @@ futures = "0.3"
 lazy_static = "1.4"
 image = "0.24"
 num_cpus = "1.16"
+neo4rs = "0.8"
+tokio-stream = "0.1"
+regex = "1"
 
 # Phase 4: Video Processing
 tonic = "0.10"
@@ -184,3 +194,19 @@ path = "tests/performance/video/video_model_inference_test.rs"
 [[test]]
 name = "video_bitrate_switching_test"
 path = "tests/performance/video/video_bitrate_switching_test.rs"
+
+[[test]]
+name = "social_graph_tests"
+path = "tests/integration/social_graph_tests.rs"
+
+[[test]]
+name = "neo4j_suggest_tests"
+path = "tests/integration/neo4j_suggest_tests.rs"
+
+[[test]]
+name = "streaming_integration_test"
+path = "tests/streaming_integration_test.rs"
+
+[[test]]
+name = "cache_test"
+path = "tests/integration/cache_test.rs"
