--- a/backend/nginx/nginx.conf
+++ b/backend/nginx/nginx.conf
@@ -91,7 +91,7 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header Connection "";
+        # proxy_set_header Connection "";
     }
 
     location /api/v1/posts/ {
@@ -104,7 +104,7 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header Connection "";
+        # proxy_set_header Connection "";
     }
 
     location /api/v1/comments/ {
@@ -117,7 +117,7 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header Connection "";
+        # proxy_set_header Connection "";
     }
 
     location /api/v1/feed/ {
@@ -130,7 +130,7 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header Connection "";
+        # proxy_set_header Connection "";
     }
 
     location /api/v1/stories/ {
@@ -143,7 +143,7 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header Connection "";
+        # proxy_set_header Connection "";
     }
 
     location /api/v1/videos/ {
@@ -156,7 +156,7 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header Connection "";
+        # proxy_set_header Connection "";
 
         # Larger timeout for video processing
         proxy_read_timeout 300s;
@@ -172,7 +172,7 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header Connection "";
+        # proxy_set_header Connection "";
 
         # Larger timeout for uploads
         proxy_read_timeout 300s;
@@ -189,7 +189,7 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header Connection "";
+        # proxy_set_header Connection "";
     }
 
     location /api/v1/discover/ {
@@ -202,7 +202,7 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header Connection "";
+        # proxy_set_header Connection "";
     }
 
     location /api/v1/trending {
@@ -215,7 +215,7 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header Connection "";
+        # proxy_set_header Connection "";
     }
 
     location /api/v1/events/ {
