fix(k8s): correct database names from nova_core to nova_auth in K8s configs
修正 Kubernetes 配置文件中的数据库名称映射：
- microservices-secrets.yaml: 更新所有服务的数据库连接字符串
  * user-service, auth-service, search-service, streaming-api: nova_core → nova_auth
  * messaging-service: 保持 nova_messaging（无变化）
- postgres-ha-statefulset.yaml: 已正确使用 nova_auth 和 nova_messaging

这次修正基于对 docker-compose.yml 的分析，确保 K8s 部署与实际的数据库架构一致。

--- a/backend/k8s/microservices-secrets.yaml
+++ b/backend/k8s/microservices-secrets.yaml
@@ -23,8 +23,8 @@ metadata:
   namespace: nova-services
 type: Opaque
 stringData:
-  # PostgreSQL 連接字符串 (nova_core 數據庫)
-  database-url: "postgresql://app_user:app_password_change_me@postgres-primary.nova-database.svc.cluster.local:5432/nova_core"
+  # PostgreSQL 連接字符串 (nova_auth 數據庫)
+  database-url: "postgresql://app_user:app_password_change_me@postgres-primary.nova-database.svc.cluster.local:5432/nova_auth"
 
   # Redis 連接字符串 (使用 Sentinel)
   redis-url: "redis://:redis_password_change_me@redis-sentinel.nova-redis.svc.cluster.local:6379/0"
@@ -49,8 +49,8 @@ metadata:
   namespace: nova-services
 type: Opaque
 stringData:
-  # PostgreSQL 連接字符串 (nova_core 數據庫 - 與 user-service 共享)
-  database-url: "postgresql://app_user:app_password_change_me@postgres-primary.nova-database.svc.cluster.local:5432/nova_core"
+  # PostgreSQL 連接字符串 (nova_auth 數據庫 - 與 user-service 共享)
+  database-url: "postgresql://app_user:app_password_change_me@postgres-primary.nova-database.svc.cluster.local:5432/nova_auth"
 
   # JWT 密鑰 (TODO: 生成實際密鑰)
   jwt-secret: "jwt_secret_key_change_me_32_bytes_long_minimum"
@@ -67,8 +67,8 @@ metadata:
   namespace: nova-services
 type: Opaque
 stringData:
-  # PostgreSQL 連接字符串 (nova_core 數據庫 - 搜索索引元數據)
-  database-url: "postgresql://app_user:app_password_change_me@postgres-primary.nova-database.svc.cluster.local:5432/nova_core"
+  # PostgreSQL 連接字符串 (nova_auth 數據庫 - 搜索索引元數據)
+  database-url: "postgresql://app_user:app_password_change_me@postgres-primary.nova-database.svc.cluster.local:5432/nova_auth"
 
   # Elasticsearch/OpenSearch
   elasticsearch-url: "http://elasticsearch.nova-infra.svc.cluster.local:9200"
@@ -117,8 +117,8 @@ metadata:
   namespace: nova-services
 type: Opaque
 stringData:
-  # PostgreSQL 連接字符串 (nova_core 數據庫)
-  database-url: "postgresql://app_user:app_password_change_me@postgres-primary.nova-database.svc.cluster.local:5432/nova_core"
+  # PostgreSQL 連接字符串 (nova_auth 數據庫)
+  database-url: "postgresql://app_user:app_password_change_me@postgres-primary.nova-database.svc.cluster.local:5432/nova_auth"
 
   # Redis (DB index 3)
   redis-url: "redis://:redis_password_change_me@redis-sentinel.nova-redis.svc.cluster.local:6379/3"
