feat(k8s): Complete local Kubernetes deployment with infrastructure and application layers
- Add microservices-deployments-local.yaml with 5 mock services (user, auth, search, streaming, messaging)
- Add COMPLETE_DEPLOYMENT_TEST_REPORT.md documenting full system deployment
- Update microservices-secrets.yaml to use simplified redis-service (non-Sentinel)
- Fix nginx pod configurations for local testing (add emptyDir volumes for cache)
- All 9 essential pods now running: 1 Redis, 1 PostgreSQL, 5 microservices, 2 others
- Service discovery and cross-layer communication verified working
- Infrastructure and application layers fully integrated and tested

--- a/backend/k8s/microservices-secrets.yaml
+++ b/backend/k8s/microservices-secrets.yaml
@@ -26,8 +26,8 @@ stringData:
   # PostgreSQL 連接字符串 (nova_auth 數據庫)
   database-url: "postgresql://app_user:app_password_change_me@postgres-primary.nova-database.svc.cluster.local:5432/nova_auth"
 
-  # Redis 連接字符串 (使用 Sentinel)
-  redis-url: "redis://:redis_password_change_me@redis-sentinel.nova-redis.svc.cluster.local:6379/0"
+  # Redis 連接字符串 (簡化版本，不使用 Sentinel)
+  redis-url: "redis://:redis_password_change_me@redis-service.nova-redis.svc.cluster.local:6379/0"
 
   # Kafka
   kafka-brokers: "kafka-0.kafka.nova-infra.svc.cluster.local:9092,kafka-1.kafka.nova-infra.svc.cluster.local:9092,kafka-2.kafka.nova-infra.svc.cluster.local:9092"
@@ -90,8 +90,8 @@ stringData:
   # PostgreSQL 連接字符串 (專用 nova_messaging 數據庫)
   database-url: "postgresql://app_user:app_password_change_me@postgres-primary.nova-database.svc.cluster.local:5432/nova_messaging"
 
-  # Redis (使用 Sentinel，DB index 1)
-  redis-url: "redis://:redis_password_change_me@redis-sentinel.nova-redis.svc.cluster.local:6379/1"
+  # Redis (簡化版本，不使用 Sentinel，DB index 1)
+  redis-url: "redis://:redis_password_change_me@redis-service.nova-redis.svc.cluster.local:6379/1"
 
   # Kafka
   kafka-brokers: "kafka-0.kafka.nova-infra.svc.cluster.local:9092,kafka-1.kafka.nova-infra.svc.cluster.local:9092,kafka-2.kafka.nova-infra.svc.cluster.local:9092"
@@ -120,8 +120,8 @@ stringData:
   # PostgreSQL 連接字符串 (nova_auth 數據庫)
   database-url: "postgresql://app_user:app_password_change_me@postgres-primary.nova-database.svc.cluster.local:5432/nova_auth"
 
-  # Redis (DB index 3)
-  redis-url: "redis://:redis_password_change_me@redis-sentinel.nova-redis.svc.cluster.local:6379/3"
+  # Redis (簡化版本，不使用 Sentinel，DB index 3)
+  redis-url: "redis://:redis_password_change_me@redis-service.nova-redis.svc.cluster.local:6379/3"
 
   # Kafka
   kafka-brokers: "kafka-0.kafka.nova-infra.svc.cluster.local:9092,kafka-1.kafka.nova-infra.svc.cluster.local:9092,kafka-2.kafka.nova-infra.svc.cluster.local:9092"
