feat(p1.2): initialize content-service microservice scaffolding
- Create content-service as new workspace member for P1.2 service splitting
- Add Cargo.toml with shared workspace dependencies
- Implement lib.rs, main.rs, and module stubs (handlers, models, services, db, cache, middleware)
- Add error.rs with AppError type and HTTP response conversion
- Add config.rs with environment-based configuration loading
- All compilation warnings resolved

Next steps: Extract posts, comments, stories handlers from user-service

--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
 members = [
     "user-service",
+    "content-service",
     "messaging-service",
     "search-service",
     "libs/crypto-core"
